--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 # Coding Fingers DataBase
 
-JCR is the bag of full code snippets in multiple variety of languages.
+JCR is the bag of full code snippets in multiple variety of languages. For now Python, C and React is supported.
